Finishing image and menu sections

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -489,6 +489,202 @@
             </div>
           </div>
         </div>
+
+        <!-- Images section -->
+        <div class="image">
+          <div class="image__grid">
+            <img
+              src="../assets/home-8-masonry-gall-1.jpg"
+              alt=""
+              class="image__grid--left"
+            />
+            <img
+              src="../assets/home-8-masonry-gall-2.jpg"
+              alt=""
+              class="image__grid--center"
+            />
+            <img
+              src="../assets/home-8-masonry-gallery-3-550x550.jpg"
+              class="image__grid--right-1"
+              alt=""
+            />
+            <img
+              src="../assets/home-2-gallery-3-550x550.jpg"
+              class="image__grid--right-2"
+              alt=""
+            />
+          </div>
+        </div>
+
+        <!-- Menu Section -->
+        <div class="menu">
+          <div class="menu__intro">
+            <h1 class="menu__intro-1">What Happens Here</h1>
+            <h1 class="menu__intro-2">Explore our menu</h1>
+          </div>
+          <div class="menu__content">
+            <ul class="menu__content--left">
+              <li class="menu__item">
+                <div class="menu__item--top">
+                  <h1 class="menu__item-title">caffee latte</h1>
+                  <div class="menu__item-dot"></div>
+                  <div class="menu__price">$2.95</div>
+                </div>
+                <div class="menu__item--bottom">
+                  <p class="menu__item--des">
+                    Fresh brewed coffee and steamed milk
+                  </p>
+                  <div class="menu__item--status">New</div>
+                </div>
+              </li>
+              <li class="menu__item">
+                <div class="menu__item--top">
+                  <h1 class="menu__item-title">CAPPUCCINO</h1>
+                  <div class="menu__item-dot"></div>
+                  <div class="menu__price">$3.70</div>
+                </div>
+                <div class="menu__item--bottom">
+                  <p class="menu__item--des">
+                    Espresso, and Smoothed Layer of Foam
+                  </p>
+                  <!-- <div class="menu__item--status">New</div> -->
+                </div>
+              </li>
+              <li class="menu__item">
+                <div class="menu__item--top">
+                  <h1 class="menu__item-title">VANILLA LATTE</h1>
+                  <div class="menu__item-dot"></div>
+                  <div class="menu__price">$3.95</div>
+                </div>
+                <div class="menu__item--bottom">
+                  <p class="menu__item--des">
+                    Espresso Milk With Flavor,and Cream
+                  </p>
+                  <!-- <div class="menu__item--status">New</div> -->
+                </div>
+              </li>
+              <li class="menu__item">
+                <div class="menu__item--top">
+                  <h1 class="menu__item-title">CAFFE MOCHA</h1>
+                  <div class="menu__item-dot"></div>
+                  <div class="menu__price">$3.67</div>
+                </div>
+                <div class="menu__item--bottom">
+                  <p class="menu__item--des">
+                    Espresso With Milk, and Whipped Cream
+                  </p>
+                  <!-- <div class="menu__item--status">New</div> -->
+                </div>
+              </li>
+              <li class="menu__item">
+                <div class="menu__item--top">
+                  <h1 class="menu__item-title">WHITE CHOCOLATE MOCHA</h1>
+                  <div class="menu__item-dot"></div>
+                  <div class="menu__price">$3.06</div>
+                </div>
+                <div class="menu__item--bottom">
+                  <p class="menu__item--des">
+                    Espresso, White Chocolate, Milk, Ice and Cream
+                  </p>
+                  <!-- <div class="menu__item--status">New</div> -->
+                </div>
+              </li>
+              <li class="menu__item">
+                <div class="menu__item--top">
+                  <h1 class="menu__item-title">CAFFE AMERICANO</h1>
+                  <div class="menu__item-dot"></div>
+                  <div class="menu__price">$4.00</div>
+                </div>
+                <div class="menu__item--bottom">
+                  <p class="menu__item--des">
+                    Espresso Shots and Light Layer of Crema
+                  </p>
+                  <!-- <div class="menu__item--status">New</div> -->
+                </div>
+              </li>
+            </ul>
+            <ul class="menu__content--right">
+              <li class="menu__item">
+                <div class="menu__item--top">
+                  <h1 class="menu__item-title">ICED CARAMEL LATTE</h1>
+                  <div class="menu__item-dot"></div>
+                  <div class="menu__price">$4.67</div>
+                </div>
+                <div class="menu__item--bottom">
+                  <p class="menu__item--des">
+                    Espresso, Milk, Ice and Caramel Sauce
+                  </p>
+                  <!-- <div class="menu__item--status">New</div> -->
+                </div>
+              </li>
+              <li class="menu__item">
+                <div class="menu__item--top">
+                  <h1 class="menu__item-title">ESPRESSO MACCHIATO</h1>
+                  <div class="menu__item-dot"></div>
+                  <div class="menu__price">$2.98</div>
+                </div>
+                <div class="menu__item--bottom">
+                  <p class="menu__item--des">
+                    Rich Espresso With Milk and Foam
+                  </p>
+                  <!-- <div class="menu__item--status">New</div> -->
+                </div>
+              </li>
+              <li class="menu__item">
+                <div class="menu__item--top">
+                  <h1 class="menu__item-title">CARAMEL MACCHIATO</h1>
+                  <div class="menu__item-dot"></div>
+                  <div class="menu__price">$2.54</div>
+                </div>
+                <div class="menu__item--bottom">
+                  <p class="menu__item--des">
+                    Espresso, Milk, Ice and Caramel Sauce
+                  </p>
+                  <!-- <div class="menu__item--status">New</div> -->
+                </div>
+              </li>
+              <li class="menu__item">
+                <div class="menu__item--top">
+                  <h1 class="menu__item-title">ICED SMOKED LATTE</h1>
+                  <div class="menu__item-dot"></div>
+                  <div class="menu__price">$3.05</div>
+                </div>
+                <div class="menu__item--bottom">
+                  <p class="menu__item--des">
+                    Espresso, ice, with smoked butterscotch
+                  </p>
+                  <div class="menu__item--status">New</div>
+                </div>
+              </li>
+              <li class="menu__item">
+                <div class="menu__item--top">
+                  <h1 class="menu__item-title">ICED CAFFE MOCHA</h1>
+                  <div class="menu__item-dot"></div>
+                  <div class="menu__price">$2.60</div>
+                </div>
+                <div class="menu__item--bottom">
+                  <p class="menu__item--des">
+                    Espresso, bittersweet mocha sauce, milk and ice
+                  </p>
+                  <!-- <div class="menu__item--status">New</div> -->
+                </div>
+              </li>
+              <li class="menu__item">
+                <div class="menu__item--top">
+                  <h1 class="menu__item-title">ICED GINGERBREAD LATTE</h1>
+                  <div class="menu__item-dot"></div>
+                  <div class="menu__price">$3.90</div>
+                </div>
+                <div class="menu__item--bottom">
+                  <p class="menu__item--des">
+                    Espresso, Milk, Ice, and Gingerbread Flavor
+                  </p>
+                  <!-- <div class="menu__item--status">New</div> -->
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </body>
