finishing the guide section

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -685,6 +685,54 @@
             </ul>
           </div>
         </div>
+
+        <!-- Guide section -->
+        <div class="guide">
+          <div class="guide__grid">
+            <div class="guide__grid-1 padd-6">
+              <h1 class="guide__grid--title">Brewing guide</h1>
+              <p class="guide__grid--des">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+                inventore aspernatur deserunt rerum doloribus magnam aliquid!
+              </p>
+              <a href="#" class="guide__grid-btn">
+                <h2>read more</h2>
+                <div class="guide__grid-btn__arrow">
+                  <i class="fas fa-arrow-right"></i>
+                </div>
+              </a>
+            </div>
+            <div class="guide__grid-2 padd-6">
+              <h1 class="guide__grid--title">Brewing guide</h1>
+              <p class="guide__grid--des">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+                inventore aspernatur deserunt rerum doloribus magnam aliquid!
+              </p>
+              <a href="#" class="guide__grid-btn">
+                <h2>read more</h2>
+                <div class="guide__grid-btn__arrow">
+                  <i class="fas fa-arrow-right"></i>
+                </div>
+              </a>
+            </div>
+            <div class="guide__grid-3"></div>
+            <div class="guide__grid-4"></div>
+            <div class="guide__grid-5"></div>
+            <div class="guide__grid-6 padd-6">
+              <h1 class="guide__grid--title">Brewing guide</h1>
+              <p class="guide__grid--des">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+                inventore aspernatur deserunt rerum doloribus magnam aliquid!
+              </p>
+              <a href="#" class="guide__grid-btn">
+                <h2>read more</h2>
+                <div class="guide__grid-btn__arrow">
+                  <i class="fas fa-arrow-right"></i>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
