finish testimonial section

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -733,6 +733,47 @@
             </div>
           </div>
         </div>
+
+        <!-- Testimonial section -->
+        <div class="testimonial">
+          <span class="testimonial__quotation"
+            ><i class="fas fa-quote-right"></i
+          ></span>
+          <ul class="testimonial__sliderarea">
+            <li class="testimonial__slider">
+              <p class="testimonial__slider-des">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et,
+                assumenda nihil tempora numquam quisquam nulla inventore quod
+                debitis similique fugiat praesentium quidem. Rerum explicabo,
+                libero architecto reiciendis quo similique perspiciatis?
+              </p>
+              <h1 class="testimonial__slider-customer">John Doe</h1>
+            </li>
+            <li class="testimonial__slider">
+              <p class="testimonial__slider-des">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et,
+                assumenda nihil tempora numquam quisquam nulla inventore quod
+                debitis similique fugiat praesentium quidem. Rerum explicabo,
+                libero architecto reiciendis quo similique perspiciatis?
+              </p>
+              <h1 class="testimonial__slider-customer">V.Nguyen</h1>
+            </li>
+            <li class="testimonial__slider">
+              <p class="testimonial__slider-des">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Et,
+                assumenda nihil tempora numquam quisquam nulla inventore quod
+                debitis similique fugiat praesentium quidem. Rerum explicabo,
+                libero architecto reiciendis quo similique perspiciatis?
+              </p>
+              <h1 class="testimonial__slider-customer">Eric</h1>
+            </li>
+          </ul>
+          <div class="testimonial__dots">
+            <div class="testimonial__dots-dot" onclick="tesClick(0)"></div>
+            <div class="testimonial__dots-dot" onclick="tesClick(1)"></div>
+            <div class="testimonial__dots-dot" onclick="tesClick(2)"></div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
