--- a/src/html/index.html
+++ b/src/html/index.html
@@ -774,6 +774,174 @@
             <div class="testimonial__dots-dot" onclick="tesClick(2)"></div>
           </div>
         </div>
+        <!-- Brand section -->
+        <div class="brand">
+          <div class="brand__slider">
+            <div class="brand__item">
+              <img src="../assets/Client/Client-1.png" alt="" />
+            </div>
+            <div class="brand__item">
+              <img src="../assets/Client/Client-2.png" alt="" />
+            </div>
+            <div class="brand__item">
+              <img src="../assets/Client/Client-3.png" alt="" />
+            </div>
+            <div class="brand__item">
+              <img src="../assets/Client/Client-4.png" alt="" />
+            </div>
+            <div class="brand__item">
+              <img src="../assets/Client/Client-5.png" alt="" />
+            </div>
+          </div>
+        </div>
+
+        <!-- Footer section -->
+        <div class="footer">
+          <div class="footer__grid">
+            <div class="footer__grid-1">
+              <h1 class="footer__grid-title">Opening Hours</h1>
+              <ul class="footer__grid-list--1">
+                <li class="footer__grid-day">
+                  <h2>Monday</h2>
+                  <div class="footer__grid-dot"></div>
+                  <p class="footer__grid-time footer__grid-time--closed">
+                    CLOSED
+                  </p>
+                </li>
+                <li class="footer__grid-day">
+                  <h2>Tuesday</h2>
+                  <div class="footer__grid-dot"></div>
+                  <p class="footer__grid-time">
+                    9:00 - 22:00
+                  </p>
+                </li>
+                <li class="footer__grid-day">
+                  <h2>Wednesday</h2>
+                  <div class="footer__grid-dot"></div>
+                  <p class="footer__grid-time">
+                    9:00 - 22:00
+                  </p>
+                </li>
+                <li class="footer__grid-day">
+                  <h2>Thursday</h2>
+                  <div class="footer__grid-dot"></div>
+                  <p class="footer__grid-time">
+                    9:00 - 22:00
+                  </p>
+                </li>
+                <li class="footer__grid-day">
+                  <h2>Friday *</h2>
+                  <div class="footer__grid-dot"></div>
+                  <p class="footer__grid-time">
+                    9:00 - 1:00
+                  </p>
+                </li>
+                <li class="footer__grid-day">
+                  <h2>Saturday</h2>
+                  <div class="footer__grid-dot"></div>
+                  <p class="footer__grid-time">
+                    12:00 - 1:00
+                  </p>
+                </li>
+                <li class="footer__grid-day">
+                  <h2>Sunday</h2>
+                  <div class="footer__grid-dot"></div>
+                  <p class="footer__grid-time">
+                    9:00 - 22:00
+                  </p>
+                </li>
+              </ul>
+            </div>
+            <div class="footer__grid-2">
+              <h1 class="footer__grid-title">Latest posts</h1>
+              <ul class="footer__grid-post">
+                <li class="footer__post">
+                  <h1 class="footer__post-news">
+                    EXPAND YOUR MIND, CHANGE EVERYTHING
+                  </h1>
+                  <p class="footer__post-time">11.07.2020</p>
+                </li>
+                <li class="footer__post">
+                  <h1 class="footer__post-news">LEWIS HOWES</h1>
+                  <p class="footer__post-time">14.02.2020</p>
+                </li>
+                <li class="footer__post">
+                  <h1 class="footer__post-news">PLACES TO GET LOST</h1>
+                  <p class="footer__post-time">4.02.2020</p>
+                </li>
+                <li class="footer__post">
+                  <h1 class="footer__post-news">ELEVATE YOUR EXPECTATIONS</h1>
+                  <p class="footer__post-time">14.02.2020</p>
+                </li>
+              </ul>
+            </div>
+            <div class="footer__grid-3">
+              <h1 class="footer__grid-title">Contact Us</h1>
+              <div class="footer__contact">
+                <p class="footer__contact-email">
+                  nguyenvannguyen.oc@gmail.com
+                </p>
+                <p class="footer__contact-phone">090XX-XXX-XXX</p>
+                <p class="footer__contact-address">
+                  Thành phố Hội An, Quảng Nam, <br />
+                  Việt Nam
+                </p>
+              </div>
+              <div class="footer__form">
+                <h1 class="footer__form-title">the last standard post</h1>
+                <div class="footer__form-filling">
+                  <input
+                    class="footer__form-box"
+                    type="text"
+                    placeholder="Your Email"
+                  />
+                  <button class="footer__form-btn">
+                    <i class="fas fa-caret-right"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="footer__grid-4">
+              <h1 class="footer__grid-title">Other locations</h1>
+              <ul class="footer__location">
+                <li>
+                  <h1 class="footer__location-title">Barista Coffe shop</h1>
+                  <p>
+                    Thành phố Đà Nẵng, <br />
+                    Việt Nam
+                  </p>
+                </li>
+                <li>
+                  <h1 class="footer__location-title">Barista Cafe</h1>
+                  <p>
+                    Thành phố Hội An, Quảng Nam, <br />
+                    Việt Nam
+                  </p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <!-- Right -->
+        <div class="right">
+          <h1 class="right__title">Barista Pro</h1>
+          <ul class="right__media">
+            <li>
+              <a href="#"><i class="fab fa-youtube"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href="#"> <i class="fab fa-twitter"></i></a>
+            </li>
+          </ul>
+          <p class="right__des">© 2020 All rights reserved</p>
+        </div>
       </div>
     </div>
   </body>
